--- a/web-api-auth-examples/package.json
+++ b/web-api-auth-examples/package.json
@@ -4,9 +4,14 @@
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.1",
   "dependencies": {
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "cookie-parser": "1.3.2",
     "express": "~4.0.0",
     "querystring": "~0.2.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "request": "~2.34.0",
     "webpack": "^1.14.0"
   }
