--- a/SpotifyApp/package.json
+++ b/SpotifyApp/package.json
@@ -11,6 +11,7 @@
     "express": "~4.0.0",
     "querystring": "~0.2.0",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "request": "~2.34.0",
     "webpack": "^1.14.0"
