--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "web-api-auth-examples",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.1",
+  "scripts": {
+    "deploy": "gh-pages -d build"
+    },
   "dependencies": {
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
@@ -15,5 +18,13 @@
     "react-dom": "^15.4.1",
     "request": "~2.34.0",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "gh-pages": "^0.12.0"
   }
 }
