--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.1",
   "scripts": {
-    "deploy": "gh-pages -d build"
+    "start": "node ./app/app.js"
     },
   "dependencies": {
     "babel-loader": "^6.2.8",
