--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.1",
   "scripts": {
-    "start": "node index.js"
-    },
+    "start": "node index.js",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "cookie-parser": "1.3.2",
     "express": "~4.0.0",
+    "fetch": "^1.1.0",
+    "gh-pages": "^0.12.0",
     "querystring": "~0.2.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
+    "react-responsive-audio-player": "^1.1.2",
     "request": "~2.34.0",
+    "request-promise": "^4.1.1",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
