--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "name": "App",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.1",
+  "engines":{
+    "node" : "6.0.0"
+    },
   "scripts": {
-    "start": "node index.js",
-    "deploy": "gh-pages -d build"
+    "start": "node ./app/app.js"
   },
   "dependencies": {
     "babel-loader": "^6.2.8",
