--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines":{
     "node" : "6.0.0"
     },
+    "main": "index.js",
   "scripts": {
     "start": "node ./app/app.js"
   },
@@ -16,7 +17,6 @@
     "cookie-parser": "1.3.2",
     "express": "~4.0.0",
     "fetch": "^1.1.0",
-    "gh-pages": "^0.12.0",
     "querystring": "~0.2.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
