--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node ./app/app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "babel-loader": "^6.2.8",
