--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "request": "~2.34.0",
     "request-promise": "^4.1.1",
     "superagent": "^3.4.3",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-express-middleware": "^1.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
@@ -33,6 +34,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
-    "gh-pages": "^0.12.0"
+    "gh-pages": "^0.12.0",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
