--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "cookie-parser": "1.3.2",
     "express": "~4.0.0",
     "fetch": "^1.1.0",
+    "node-persist": "^2.0.11",
     "querystring": "~0.2.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.5",
     "react-responsive-audio-player": "^1.1.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "request": "~2.34.0",
     "request-promise": "^4.1.1",
     "superagent": "^3.4.3",
